# TTT4145-Semester-Project

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  SPECS.md  TODO.md  build_pluto_ext.sh  conftest.py  constellation.npy  explain  fetch_plots.sh  flash_pluto.sh  iio_setup.sh  main.py  nohup.out  pyproject.toml  setup.py  setup.sh  setup_namespaces.sh  sweep-inline.csv  sweep-mp.csv  sweep.csv  sync_code.sh
data/: ldpc_coding_gain.csv  ldpc_coding_gain_1e5.csv  ldpc_coding_gain_bpsk.csv  occupied_bandwidth_4msps_results.npy  occupied_bandwidth_4msps_trace.npy  occupied_bandwidth_6msps_results.npy  occupied_bandwidth_6msps_trace.npy  power_compliance_step2_4msps.npy  power_compliance_step2_6msps.npy  power_compliance_step3_4msps.npy  power_compliance_step3_6msps.npy
docs/: investigation_bridge_crc_mismatch.md
examples/: __init__.py  ber_vs_snr.py  plot_constellations.py  soft_decision_demo.py
modules/: __init__.py  arq.py  cfo_timing_and_detection.py  channel.py  channel_coding.py  costas.c  costas_loop.py  equalization.py  frame_constructor.py  frame_sync.py  golay.py  modulation.py  modulation_schemes.py  modulators.py  modulators_ext.cpp  parallel_pipeline.py  pilots.py  pipeline.py  plotting.py  pulse_shaping.py  pulseshaping.py  synchronization.py  syncronization.py  tun.py  util.py
pluto/: __init__.py  benchmark.py  bridge.py  cfo_config.py  cfo_scan.py  check_spectrum.py  config.py  decode.py  live_status.py  loopback.py  loopback_packet.py  loopback_sweep.py  loopback_threaded.py  one_way_threaded.py  receive.py  rrc_ctrl.py  run_test.sh  rx_agc.py  sdr_stream.py  setup.json  setup_config.py  spectrum_analyzer.py  test_2_data_roundtrip.py  test_3_sync.py  test_4_full_pipeline.py  test_measure_cfo.py  test_rx_debug.py  timing_jitter_test.py  transmit.py  tun_link.py  tun_link_arq.py  tx_continuous.py  visualize.py
report/: build.sh  frame_format.tex  pipeline.tex
scripts/: bench_ldpc.py  bench_max_bitrate.py  bench_parallel_pipeline.py  bench_psk_compare.py  bench_xcorr.py  bridge_benchmark.sh  bridge_netns.sh  cfo_calibrate.py  constellation_evm.py  cross_eval_sync_params.py  flash_pluto.sh  iio_setup.ps1  iio_setup.sh  (+35 more)
(+90 files in other folders)
