[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[project]
name = "radiokommunikasjon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.0",
    "pyadi-iio>=0.0.17",
    "scipy>=1.9",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
speed = ["numba>=0.63.1"]
test = ["hypothesis>=6.151.6", "pytest>=9.0.2"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = [".git", ".tox", ".hypothesis", "build", "dist", ".venv", "vendor", "pluto"]

[tool.uv]
system-site-packages = true

[tool.ruff]
line-length = 120
extend-exclude = ["vendor"]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 8
