[project]
name = "radiokommunikasjon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pybind11>=3.0.2",
    "pytest>=9.0.2",
    "setuptools>=82.0.1",
]
[build-system]
requires = ["setuptools", "pybind11", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
