[project]
name = "radiokommunikasjon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 120
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 8

[tool.ty.rules]
all = "error"
